--- a/sertifikat.html
+++ b/sertifikat.html
@@ -112,7 +112,7 @@
    
 
       // API endpoint to retrieve data from Google Sheets based on the ID
-      const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/1B0XZP71THdyZwCoipwMNGGYN_PSWjMU-Bz4LQThBq_E/values/A${id}:G${id}?key=AIzaSyDG5Kb9aSRrUB9IFUJ_8Sn-WdQDR9cU-GI`;
+      const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/1B0XZP71THdyZwCoipwMNGGYN_PSWjMU-Bz4LQThBq_E/values/A${id}:H${id}?key=AIzaSyDG5Kb9aSRrUB9IFUJ_8Sn-WdQDR9cU-GI`;
 
       // Fetch data from Google Sheets
       $.getJSON(sheetURL, function(data) {
