--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Card -->
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title"><img src="logo.png" class="center" alt="Universitas Lambung Mangkurat">Sertifikat Bebas Plagiasi - Program Pascasarjana ULM</h5>
+        <h5 class="card-title"><img src="logo.png" class="center" alt="Universitas Lambung Mangkurat">Sertifikat Bebas Plagiasi<br>Program Pascasarjana ULM</h5>
 
       
       
