--- a/sertifikat.html
+++ b/sertifikat.html
@@ -16,7 +16,7 @@
       position: relative;
       text-align: center;
       margin-top: 50px;
-      background-image: url("bg.png");
+      background-image: url("bg.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -67,7 +67,7 @@
       }
 
       #certificate-container {
-        background-image: url("bg.png");
+        background-image: url("bg.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
