--- a/sertifikat.html
+++ b/sertifikat.html
@@ -159,9 +159,9 @@ position: absolute;
       <h4><b>SERTIFIKAT BEBAS PLAGIASI</b></h4>
       <p>NOMOR : ${rowData[1]}</p>
       <p>Sertifikat ini diberikan kepada:</p>
-      <p style="text-transform: uppercase; font-weight: bold;"><h4><b>${rowData[5]}</b></h4></p>
-      <p>Dengan Judul ${rowData[6]} :<br>
-      ${rowData[7]}</p>
+      <p style="text-transform: uppercase; font-weight: bold;"><h4><b>${rowData[3]}</b></h4></p>
+      <p>Dengan Judul ${rowData[4]} :<br>
+      ${rowData[5]}</p>
       <p>Telah dideteksi tingkat plagiasinya dengan kriteria toleransi ≤ 20%, dan <br>dinyatakan Bebas dari Plagiasi.</p>
       <p>Banjarmasin, ${rowData[2]}<br>
       Direktur,</p>      
@@ -171,7 +171,7 @@ position: absolute;
  <div id="qrcode-container">
               <div id="qrcode"></div> <!-- Menambahkan div untuk menampilkan QR code -->
             </div>
-      <p>${rowData[3]}<br>NIP ${rowData[4]}</p>     
+      <p>Prof. Dr. Ir. Danang Biyatmoko, M.Si.<br>NIP 196805071993031020</p>     
     </div>
         </div>
       </div>
