--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
     <tr>
         <td>Penandatangan</td>
         <td>: </td>
-        <td>${rowData[3]} - Direktur Program Pascasarjana ULM</td>
+        <td>Prof. Dr. Ir. Danang Biyatmoko, M.Si. - Direktur Program Pascasarjana ULM</td>
     </tr>
     <tr>
         <td>Nama Penerima Sertifikat</td>
         <td>: </td>
-        <td>${rowData[5]}</td>
+        <td>${rowData[3]}</td>
     </tr>
     <tr>
-        <td>Judul ${rowData[6]}</td>
+        <td>Judul ${rowData[4]}</td>
         <td>: </td>
-        <td>${rowData[7]}</td>
+        <td>${rowData[5]}</td>
     </tr>
 </table> `;          
           $('#deteksi-data').html(htmlData);
