--- a/sertifikat.html
+++ b/sertifikat.html
@@ -30,7 +30,7 @@
     .canvas {
       width: 1077px;
       height: 820px;
-      background-image: url('bg.png');
+      background-image: url('bg.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
