--- a/sertifikat.html
+++ b/sertifikat.html
@@ -59,7 +59,7 @@ position: absolute;
     /* Print view - Background image for A4 landscape */
     @media print {
       html, body {
-        background-image: url('bg.png');
+        background-image: url('bg.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
