--- a/sertifikat.html
+++ b/sertifikat.html
@@ -164,14 +164,14 @@ position: absolute;
       ${rowData[7]}</p>
       <p>Telah dideteksi tingkat plagiasinya dengan kriteria toleransi ≤ 20%, dan <br>dinyatakan Bebas dari Plagiasi.</p>
       <p>Banjarmasin, ${rowData[2]}<br>
-      Direktur,</p>      
+      ${rowData[8]},</p>      
      <br>
 <br>
 <br>
  <div id="qrcode-container">
               <div id="qrcode"></div> <!-- Menambahkan div untuk menampilkan QR code -->
             </div>
-      <p>Prof. Dr. Ir. Danang Biyatmoko, M.Si.<br>NIP 196805071993031020</p>     
+      <p>${rowData[9]}<br>NIP ${rowData[10]}</p>     
     </div>
         </div>
       </div>
