--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       const id = urlParams.get('id'); // ID in hex format
 
       const spreadsheetId = '1B0XZP71THdyZwCoipwMNGGYN_PSWjMU-Bz4LQThBq_E';
-      const sheetId = 'Sertifikat!A2:H50000'; // Jika menggunakan URL JSON feed, Anda memerlukan sheet ID
+      const sheetId = 'Sertifikat!A2:K50000'; // Jika menggunakan URL JSON feed, Anda memerlukan sheet ID
       const api_key = 'AIzaSyDG5Kb9aSRrUB9IFUJ_8Sn-WdQDR9cU-GI'; // Jika menggunakan URL JSON feed, Anda memerlukan sheet ID
 
       // API endpoint to retrieve data from Google Sheets based on the ID
@@ -145,7 +145,7 @@
     <tr>
         <td>Penandatangan</td>
         <td>: </td>
-        <td>Prof. Dr. Ir. Danang Biyatmoko, M.Si. - Direktur Program Pascasarjana ULM</td>
+        <td>${rowData[9]} - ${rowData[8]}</td>
     </tr>
     <tr>
         <td>Nama Penerima Sertifikat</td>
